adjust followers only default time

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -170,7 +170,7 @@
         </div>
         <div>
             <label class="switch">
-                <input type="checkbox" ng-model="ctrl.followersEnabled" ng-checked="ctrl.followersEnabled" ng-change="ctrl.chatCommand('followers', ctrl.followersEnabled)">
+                <input type="checkbox" ng-model="ctrl.followersEnabled" ng-checked="ctrl.followersEnabled" ng-change="ctrl.chatCommand('followers 10', ctrl.followersEnabled)">
                 <span class="slider round"><span>{{ctrl.followersonlyTime()}}</span></span>
             </label>
         </div>
