--- a/views/index.ejs
+++ b/views/index.ejs
@@ -210,6 +210,7 @@
         <span ng-class="{connected: ctrl.status.app.twitchIrc}">Twitch Chat</span>
         <span ng-class="{connected: ctrl.status.app.twitchPs}">Twitch PS</span>
         <span class="followers">{{ctrl.followers}}</span>
+        <a href="/terms" target="_blank"><div class="followers" title="Suspicious Follower Terms">{{ctrl.followers}}</div></a>
     </div>
 </body>
 
