--- a/views/index.ejs
+++ b/views/index.ejs
@@ -150,6 +150,9 @@
             </div>
         </div>
         <div class="column">
+            <div class="hours">
+                <h3>Hours Streamed: {{ctrl.hours}}</h3>
+            </div>
             <div class='frontPage' ng-show="ctrl.status.onFrontPage">
                 <ul>
                     <li>
