--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,7 +138,8 @@
         </div>
         <div class="column">
             <div class="hours">
-                <h3>Hours Streamed: {{ctrl.hours}}</h3>
+                <h3>Hours This Quarter: {{ctrl.hoursThisQuarter}}</h3>
+                <h5>Hours Last Quarter: {{ctrl.hoursLastQuarter}}</h5>
             </div>
             <div class='frontPage' ng-show="ctrl.status.onFrontPage">
                 <ul>
