--- a/views/index.ejs
+++ b/views/index.ejs
@@ -201,8 +201,10 @@
         <span ng-class="{connected: ctrl.status.app.tipsWs}">StreamElements Tips</span>
         <span ng-class="{connected: ctrl.status.app.twitchIrc}">Twitch Chat</span>
         <span ng-class="{connected: ctrl.status.app.twitchPs}">Twitch PS</span>
-        <span class="followers">{{ctrl.followers}}</span>
-        <a href="/terms" target="_blank"><div class="followers" title="Suspicious Follower Terms">{{ctrl.followers}}</div></a>
+        <span id="right-container">
+            <span id="multi" ng-click="ctrl.openMulti()">Open Multi</span>
+            <a href="/terms" target="_blank"><span id="followers" title="Suspicious Follower Terms">{{ctrl.followers}}</span></a>
+        </span>
     </div>
 </body>
 
